hphp/hack/test/typecheck/expression_trees/pipe4.php.exp
File "pipe4.php", line 12, characters 41-42:
Invalid argument (Typing[4110])
  File "pipe4.php", line 5, characters 14-16:
  Expected `int`
  File "pipe4.php", line 5, characters 23-60:
  But got `ExprTree<Code, mixed, ExampleInt>`
File "pipe4.php", line 14, characters 10-12:
Invalid return type (Typing[4110])
  File "pipe4.php", line 9, characters 45-56:
  Expected `ExampleFloat`
  File "pipe4.php", line 12, characters 8-46:
  But got `TInfer#1 = ExampleInt`
  File "expr_tree.hhi", line 14, characters 33-38:
    via this generic `TInfer`
